# rdfreak

./: Cargo.toml  LICENSE  README.md
rdfreak/: Cargo.toml
rdfreak/src/: construct_query.rs  constructible.rs  constructible_field.rs  constructible_property.rs  deserialize_rdf_property.rs  entity.rs  from_rdf.rs  from_rdf_literal.rs  from_rdf_object.rs  from_rdf_property.rs  lib.rs  macros.rs  object.rs  property.rs  rdf_type.rs  resource.rs  serialize_rdf_property.rs  sparql_variable_generator.rs  sqarql_construct_query_patterns.rs  to_rdf.rs  to_rdf_literal.rs  to_rdf_object.rs  to_rdf_property.rs  utils.rs
rdfreak_chrono/: Cargo.toml  README.md
rdfreak_chrono/src/: date.rs  date_time.rs  lib.rs  naive_date_time.rs
rdfreak_derive/: Cargo.toml
rdfreak_derive/src/: derive_constructible_impl.rs  derive_entity_impl.rs  derive_from_rdf_impl.rs  derive_rdf_literal_impl.rs  derive_resource_impl.rs  derive_to_rdf_impl.rs  lib.rs  utils.rs
rdfreak_query/: Cargo.toml  README.md
rdfreak_query/src/: graph_database.rs  lib.rs  query_client.rs
rdfreak_query_oxigraph/: Cargo.toml  README.md
rdfreak_query_oxigraph/src/: graph_database.rs  lib.rs
rdfreak_utils/: Cargo.toml  README.md
rdfreak_utils/src/: lib.rs  object_ref.rs
src/: entity.rs  lib.rs  literal.rs  object.rs  rdf_type.rs
