[workspace]
name = "rdfreak"
edition = "2024"
license = "MIT"
keywords = ["rdf", "serialization", "deserialization"]
homepage = "https://github.com/WLowe10/rdfreak"
repository = "https://github.com/WLowe10/rdfreak"
documentation = "https://docs.rs/rdfreak"
members = [
    "rdfreak",
]

[workspace.dependencies]
oxrdf = "0.3.0"
thiserror = "2.0.18"
