[package]
name = "rdfreak_chrono"
version = "0.1.0"
description = "Chrono types for rdfreak"
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
rdfreak = { path = "../rdfreak" }
oxrdf = { workspace = true }
chrono = "0.4"

[dev-dependencies]
pretty_assertions = { workspace = true }
