[package]
name = "rdfreak_query_oxigraph"
version = "0.1.0"
description = "Oxigraph adapter helpers for rdfreak_query"
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
rdfreak = { path = "../rdfreak" }
rdfreak_query = { path = "../rdfreak_query" }
oxrdf = { workspace = true }
async-trait = { workspace = true }
oxigraph = "0.5.6"